php execution added

--- a/code/www/hello-world.html
+++ b/code/www/hello-world.html
@@ -1,1 +1,10 @@
 <h1>Hello World!</h1>
+<form action="hello.php" method="GET">
+    <input type="text" name="name">
+    <button type="submit">GET Submit</button>
+</form>
+
+<form action="hello.php" method="POST">
+    <input type="text" name="name">
+    <button type="submit">POST Submit</button>
+</form>
