--- a/code/www/calculator.html
+++ b/code/www/calculator.html
@@ -18,7 +18,7 @@
             <option value="/">/</option>
         </select>
         <input type="text" name="number2" required="required" />
-        <input type="submit" value="Calculate" />
+        <input id="submit_button" type="submit" value="Calculate" />
     </form>
 </body>
 </html>
